Created simple engine entity

--- a/meson.build
+++ b/meson.build
@@ -3,6 +3,8 @@ project('Literally', 'cpp', version : '0.0.1_pre-alpha')
 deps = [dependency('sdl2')]
 incdir = include_directories('include')
 
-sources = ['src/main.cpp', 'src/Engine/engine.cpp']
+subdir('src/Engine')
 
-executable('Literally', sources, dependencies : deps, include_directories : incdir)
+sources = ['src/main.cpp']
+
+executable('Literally', sources, dependencies : deps, include_directories : incdir, link_with : libs)
