--- a/src/Engine/meson.build
+++ b/src/Engine/meson.build
@@ -1,2 +1,3 @@
-lib_sources = ['engine.cpp', 'Scene/layer.cpp', 'Scene/scene.cpp']
+deps = [dependency('sdl2'), dependency('sdl2_image')]
+lib_sources = ['engine.cpp', 'Scene/layer.cpp', 'Scene/scene.cpp', 'Object/image.cpp']
 libs = [library('MinervaEngine', lib_sources, include_directories : incdir, dependencies: deps)]
